# artifice

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  REFACTORING_PLAN.md  init.py.example  init.yaml.example  pyproject.toml  pytest.ini
.github/workflows/: pylint.yml  python-app.yml
completions/: _art  art.bash  art.fish
config/: init.yaml
docs/: ARCHITECTURE.md  COMPONENTS.md  CONFIGURATION.md  DEVELOPMENT.md  EXECUTION_MODEL.md  README.md  STREAMING.md  TUI.md  neovim.md
nvim-plugin/plugin/: art.lua
prompts/: add-tests.md  add-types.md  answer.md  commit-message.md  convert-format.md  debug-error.md  debug-shell.md  debug-stack-trace.md  deep-dive.md  explain-code.md  explain-command.md  fix-bugs.md  interview-prep.md  optimize.md  pr-description.md  pros-cons.md  review-diff.md  sanitize-input.md  security-audit.md  simplify.md  system.md  troubleshoot.md  weather.md  write-changelog.md  write-class.md  write-command.md  write-function.md  write-pipeline.md
src/artifice/: agent.py  (+36 more)
tests/: conftest.py  test_agent.py  test_ansi_handler.py  test_assistant.py  test_base_executor.py  test_chunk_buffer.py  test_code_block_detection.py  test_config.py  test_config_output_blocks.py  test_edit_tool.py  test_execution_errors.py  test_fence_backticks_in_context.py  test_fence_detector.py  test_history.py  test_ollama_agent.py  test_openai_tools.py  test_prompts.py  test_provider.py  test_python_executor.py  test_session.py  test_shell_executor.py  test_simulated_agent.py  test_string_tracker.py  test_terminal_output.py  test_tmux_executor.py
(+124 files in other folders)
